[package]
name = "yewbulma"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
console_log = "0.2"
anyhow = "1"

serde = { version = "1.0", features = ["rc"] }
serde_derive = "1"

# WebAssembly
yew = { version = "0.14", features = ["web_sys"] } # 0.15 not possible to use due 
yew-router = { version = "0.11", features = ["web_sys"] } # 0.12 problem with yew-router https://github.com/yewstack/yew/pull/1136
wee_alloc = "0.4"

wasm-bindgen = { version = "0.2", features = ["serde-serialize" ] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
