[package]
name = "yewbulma"
version = "0.2.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"
license = "MIT"

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
default = []
fetch = []



[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
console_log = "0.2"
anyhow = "1.0"

serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde_derive = "1.0"

# Wasm
yew = "0.19"
yew-router = "0.14"
wee_alloc = "0.4"

wasm-bindgen = { version = "0.2", features = ["serde-serialize" ] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
